--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
 		"isotope-layout": "^3.0.6",
 		"next": "^16.0.7",
 		"nice-select2": "^2.4.0",
+		"nodemailer": "^7.0.12",
 		"react": "^19.2.1",
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.2.1",
 		"react-intersection-observer": "^9.16.0",
 		"react-odometerjs": "^3.1.3",
+		"react-phone-input-2": "^2.15.1",
 		"react-range-slider-input": "^3.2.1",
 		"sweetalert2": "^11.22.5",
 		"swiper": "^11.2.10",
